fixed mobile text positioning, added new copy, added space on mobile to accommodate new copy

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -158,7 +158,7 @@ img {
     text-align: center;
     font-variant: normal;
     font-family: 'Open Sans';
-    margin: 106px 0 0 4px;
+    margin: 106px 0 0 0px;
     font-size:32px;
     font-weight: 700;
 }
@@ -270,7 +270,7 @@ background: rgb(10, 182, 180);
 .tile-7 {
     position: relative;
     width: 100%;
-    height: 180px;
+    height: 200px;
     float: left;
     margin: 0 0 0 0;
     background-color: rgb(242,242,242);
@@ -339,7 +339,7 @@ img {
 .tile-10 {
     position: relative;
     width: 100%;
-    height: 180px;
+    height: 200px;
     float: left;
     margin: 0 0 0 0;
     background-color: white;
